# timezoneDB

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json  compose.yml  logger.json  package.json  tsconfig.json
config/: index.ts
migrations/: 001_initial.sql  002_created_at-updated_at.sql
public/: index.html
public/css/: style.css
public/js/: index.js
src/: config.rs  discord.ts  index.ts  main.rs  types.rs
src/db/: mod.rs  postgres.rs  redis_helper.rs
src/lib/: cors.ts
src/middleware/: cors.rs
src/routes/: auth.rs  health.rs  mod.rs  timezone.rs
types/: discord.d.ts  index.d.ts
